# reducer

./: Containerfile  Dockerfile  README.md  clusterer.py  dimensionality_reducer.py  main.py  pyproject.toml  requirements.txt  weaviate_client.py
.github/: dependabot.yml
.github/workflows/: main.yml
model/: data_preparation.py  model_exec.py
src/: clusterer.py  dimensionality_reducer.py  main.py  standalone.py  weaviate_client.py
src/vec_database/: sample_search_from_created.py  weaviate_create_col.py
vec_database/: samle_create_objects.py  sample_search_from_created.py  weaviate_create_col.py
