[project]
name = "app"
version = "0.0.1"
description = ""
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi==0.129.0",
    "uvicorn==0.46.0",
    "pydantic==2.13.4",
    "typing-extensions==4.15.0",
    "python-dotenv==1.2.2",
    "numpy==2.4.4",
    "scikit-learn==1.8.0",
    "weaviate-client==4.19.4",
    "packaging>=26.2",
    "pacmap==0.8.0",
    "umap-learn==0.5.12",
    "trimap==1.1.5",
    "hdbscan==0.8.42",
]

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"


[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

